[package]
name = "p3-poseidon2"
version = "0.1.4-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gcd = "2.3.0"
p3-field = "0.1.4-succinct"
p3-symmetric = "0.1.4-succinct"
p3-mds = "0.1.4-succinct"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
p3-mersenne-31 = "0.1.4-succinct"
p3-baby-bear = "0.1.4-succinct"
p3-koala-bear = "0.1.4-succinct"
p3-bn254-fr = "0.1.4-succinct"
p3-goldilocks = "0.1.4-succinct"
criterion = "0.5.1"

[[bench]]
name = "poseidon2"
harness = false
